# MLproffesional-project

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dab/: databricks.yml  job.yml
scripts/: run_data_ingestion.py  run_feature_pipeline.py  run_monitoring.py  run_retraining.py  run_training.py
src/databricks_ml_project/: config.py  data_ingestion.py  deployment.py  distributed_tuning_optuna.py  distributed_tuning_ray.py  feature_pipeline.py  mlflow_tracking.py  monitoring.py  retraining.py  training_sparkml.py
tests/: test_data_ingestion.py  test_deployment.py  test_monitoring.py  test_retraining.py
