[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-ml-lifecycle-project"
version = "0.1.0"
description = "Exam-aligned Databricks ML lifecycle project scaffold"
requires-python = ">=3.10"
dependencies = [
  "mlflow>=2.9.0",
  "optuna>=3.4.0",
  "ray[tune]>=2.8.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "pyspark>=3.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
